--- a/index.html
+++ b/index.html
@@ -133,6 +133,32 @@
         <a href="#" class="btn">See More</a>
       </div>
     </div>
+    <!-- ------contact---  -->
+     <div id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="contact-left">
+            <h1>Contact Me</h1>
+            <p><i class="fa-brands fa-telegram"></i> ftraveller23@gamil.com</p>
+            <p> <i class="fa-solid fa-square-phone"></i>9745281196</p>
+            <div class="social-icons">
+              <a href="https://www.facebook.com/bhabuk.bhattarai.77"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://x.com/FellowTravell20"><i class="fa-brands fa-x-twitter"></i></i></a>
+              <a href=""><i class="fa-brands fa-linkedin"></i></i></a>
+            </div>
+            <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+          </div>
+          <div class="contact-right"></div>
+          <form>
+            <input type="text" name="Name" placeholder="Your Name" required>
+            <input type="text" name="email" placeholder="your Email" required>
+            <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+            <button type="submit">Submit</button>
+
+          </form>
+        </div>
+      </div>
+     </div>
   
     <script>
       var tablinks =document.getElementsByClassName("tab-links");
