--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <input type="text" name="Name" placeholder="Your Name" required>
             <input type="text" name="email" placeholder="your Email" required>
             <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-            <button type="submit">Submit</button>
+            <button type="submit" class="btn btn2">Submit</button>
 
           </form>
         </div>
