done for big screen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
       </nav>
       <div class="header-text">
-        <p>UI/UX Designer</p>
+        <p>Designer // Writer</p>
         <h1>Hi, I'm <span>Bhabuk<br>.B</span> from Lamjung</h1>
       </div>
     </div>
@@ -107,24 +107,24 @@
         <div class="work">
           <img src="images/work-1.png">
           <div class="layer">
-            <h3>Social Media App</h3>
-            <p>Download the app from the play store!</p>
-            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <h3>Room for shadows</h3>
+            <p>A glimps of my writing in page!<br><br>Unwhispered Perhaps</p>
+            <a href="https://www.facebook.com/afellowtraveller23"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
           <img src="images/work-2.png">
           <div class="layer">
-            <h3>Music App</h3>
-            <p>Download the app from the play store!</p>
+            <h3>Poetry Website</h3>
+            <p>Poems written by myself hehe<br><br>Workin' on it!!</p>
             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
-          <img src="images/work-3.png">
+          <img src="images/work-3.jpg">
           <div class="layer">
-            <h3>Online Shopping App</h3>
-            <p>Download the app from the play store!</p>
+            <h3>'Her Blue Sky'</h3>
+            <p>A frictional novel based on .....!</p>
             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
@@ -145,6 +145,7 @@
             <a href="https://www.facebook.com/bhabuk.bhattarai.77"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://x.com/FellowTravell20"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
           </div>
           <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
         </div>
