--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <nav>
         <img src="images/logo.png" class="logo">
         <ul id="sidemenu">
+          <!-- <i class="fa-solid fa-xmark" onclick="closemenu()"></i> -->
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
-          <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
       </nav>
@@ -108,7 +108,7 @@
           <img src="images/work-1.png">
           <div class="layer">
             <h3>Room for shadows</h3>
-            <p>A glimps of my writing in page!<br><br></p>
+            <p>A glimpse of my writing in page!<br><br></p>
             <a href="https://www.facebook.com/afellowtraveller23"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
@@ -124,7 +124,7 @@
           <img src="images/work3.jpg">
           <div class="layer">
             <h3>'Her Blue Sky'</h3>
-            <p>A frictional novel based on .....!</p>
+            <p>A fictional novel based on .....!</p>
             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
@@ -144,8 +144,7 @@
           <div class="social-icons">
             <a href="https://www.facebook.com/bhabuk.bhattarai.77"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://x.com/FellowTravell20"><i class="fa-brands fa-x-twitter"></i></a>
-           <a href="#"><i class="fa-brands fa-linkedin"></i></a> 
-           <!-- no linkdin account yet -->
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/Ftbhabok"><i class="fa-brands fa-github"></i></a>
           </div>
           <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
@@ -166,6 +165,8 @@
     </div>
   </div>
 
+  <div id="nav-overlay" onclick="closemenu()"></div>
+
   <!-- JavaScript -->
   <script>
     var tablinks = document.getElementsByClassName("tab-links");
@@ -185,34 +186,49 @@
 
   <script>
     var sidemenu = document.getElementById("sidemenu");
+    var overlay = document.getElementById("nav-overlay");
 
     function openmenu() {
       sidemenu.style.right = "0";
+      overlay.style.display = "block";
+      document.body.style.overflow = 'hidden';
     }
 
     function closemenu() {
       sidemenu.style.right = "-200px";
+      overlay.style.display = "none";
+      document.body.style.overflow = 'auto';
     }
+
+    // Close menu when clicking on a menu item
+    document.querySelectorAll('#sidemenu a').forEach(item => {
+      item.addEventListener('click', closemenu);
+    });
+
+    // Close menu when clicking outside
+    overlay.addEventListener('click', closemenu);
   </script>
+
   <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbxURh7OEk3X5Jy9aEL6ttvECeT85LsCk7x0YkRGKqSoxbPQpEChPdrF2Wn44TK2LWPpuA/exec'
     const form = document.forms['submit-to-google-sheet']
-    const msg= document.getElementById("msg")
+    const msg = document.getElementById("msg")
     form.addEventListener('submit', e => {
       e.preventDefault()
       fetch(scriptURL, { method: 'POST', body: new FormData(form)})
         .then(response => {
-          msg.innerHTML= "Message sent successfully"
-          setTimeout(function(){
-            msg.innerHTML= ""
-          },5000)
+          msg.innerHTML = "Message sent successfully"
+          setTimeout(function() {
+            msg.innerHTML = ""
+          }, 5000)
           form.reset()
         })
         .catch(error => console.error('Error!', error.message))
     })
   </script>
-  <!-- service learn more transition -->
-   <script>
+
+  <!-- Service learn more transition -->
+  <script>
     document.addEventListener('DOMContentLoaded', function() {
       const serviceDivs = document.querySelectorAll('.services-list div');
       
@@ -228,6 +244,7 @@
         });
       });
     });
-   </script>
+  </script>
+  <script></script>
 </body>
 </html>
