--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
       </nav>
       <div class="header-text">
-        <p>Designer // Writer</p>
+        <p>Designer <span>//</span> Writer</p>
         <h1>Hi, I'm <span>Bhabuk<br>.B</span> from Lamjung</h1>
       </div>
     </div>
