in portfolio link button added glow effect

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About Me</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+          <p>You can categorize me as adaptive learner !!</p>
 
           <div class="tab-titles">
             <p class="tab-links active-link" onclick="opentab(event, 'skills')">Skills</p>
@@ -80,19 +80,19 @@
         <div>
           <i class="fa-solid fa-code"></i>
           <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+          <p>Intermediate web Designing capabilities</p>
           <a href="#">Learn More</a>
         </div>
         <div>
           <i class="fa-solid fa-crop-simple"></i>
-          <h2>UI/UX Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+          <h2>Literature</h2>
+          <p>From confession notes to suicidal notes, we write it all!</p>
           <a href="#">Learn More</a>
         </div>
         <div>
           <i class="fa-brands fa-app-store"></i>
           <h2>App Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+          <p>......................</p>
           <a href="#">Learn More</a>
         </div>
       </div>
@@ -116,14 +116,14 @@
           <img src="images/work-2.png">
           <div class="layer">
             <h3>"Unwhispered Perhaps"</h3>
-            <p> Poetry website of own writing hehe<br><br>Workin' on it!!</p>
+            <p> Poetry website based on own writing hehe<br><br>Workin' on it!!</p>
             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
           <img src="images/work3.jpg">
           <div class="layer">
-            <h3>'Her Blue Sky'</h3>
+            <h3>"Blue Sky'"</h3>
             <p>A fictional novel based on .....!</p>
             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
@@ -139,8 +139,8 @@
       <div class="row">
         <div class="contact-left">
           <h1>Contact Me</h1>
-          <p><i class="fa-brands fa-telegram"></i> ftraveller23@gmail.com</p>
-          <p><i class="fa-solid fa-square-phone"></i> 9745281196</p>
+          <p><i class="fa-brands fa-telegram"></i>ftraveller23@gmail.com</p>
+          <p><i class="fa-solid fa-square-phone"></i>9745281196</p>
           <div class="social-icons">
             <a href="https://www.facebook.com/bhabuk.bhattarai.77"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://x.com/FellowTravell20"><i class="fa-brands fa-x-twitter"></i></a>
@@ -245,6 +245,9 @@
       });
     });
   </script>
-  <script></script>
+
+  <script>
+    
+  </script>
 </body>
 </html>
