made link of fb_page open in new tab

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>personal portfolio</title>
   <link href="style2.css" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/011f8f2255.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">)
 </head>
 <body>
   <div id="header">
@@ -23,7 +25,11 @@
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
       </nav>
       <div class="header-text">
-        <p>Designer <span>//</span> Writer</p>
+        <p>
+          <span class="designer">Designer</span>
+          <span class="separator">//</span>
+          <span class="writer">Writer</span>
+        </p>
         <h1>Hi, I'm <span>Bhabuk<br>.B</span> from Lamjung</h1>
       </div>
     </div>
@@ -109,7 +115,7 @@
           <div class="layer">
             <h3>Room for shadows</h3>
             <p>A glimpse of my writing in page!<br><br></p>
-            <a href="https://www.facebook.com/afellowtraveller23"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <a href="https://www.facebook.com/afellowtraveller23" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
