--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link href="style2.css" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/011f8f2255.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">)
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+  <!--  this is awesome for writer <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet"> -->
 </head>
 <body>
   <div id="header">
@@ -29,6 +30,7 @@
           <span class="designer">Designer</span>
           <span class="separator">//</span>
           <span class="writer">Writer</span>
+          <img src="c:\Users\ftrav\Downloads\feather.png" alt="">
         </p>
         <h1>Hi, I'm <span>Bhabuk<br>.B</span> from Lamjung</h1>
       </div>
