header section transmittion

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <script src="https://kit.fontawesome.com/011f8f2255.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-  <!--  this is awesome for writer <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet"> -->
 </head>
 <body>
   <div id="header">
@@ -28,9 +27,8 @@
       <div class="header-text">
         <p>
           <span class="designer">Designer</span>
-          <span class="separator">//</span>
-          <span class="writer">Writer</span>
-          <img src="c:\Users\ftrav\Downloads\feather.png" alt="">
+          <span class="separator1">/</span><span class="separator2">/</span>
+         <span class="writer">Writer</span>
         </p>
         <h1>Hi, I'm <span>Bhabuk<br>.B</span> from Lamjung</h1>
       </div>
