--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <script src="https://kit.fontawesome.com/011f8f2255.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
+  
 </head>
 <body>
   <div id="header">
@@ -28,9 +32,9 @@
         <p>
           <span class="designer">Designer</span>
           <span class="separator1">/</span><span class="separator2">/</span>
-         <span class="writer">Writer</span>
+          <span class="writer">Writer</span>
         </p>
-        <h1>Hi, I'm <span>Bhabuk<br>.B</span> from Lamjung</h1>
+        <h1 class="intro-text">Hi, I'm <span>Bhabuk<br>.B</span> from Lamjung</h1>
       </div>
     </div>
   </div>
@@ -43,7 +47,7 @@
           <img src="images/user.jpg">
         </div>
         <div class="about-col-2">
-          <h1 class="sub-title">About Me</h1>
+          <h1 class="section-title">About Me</h1>
           <p>You can categorize me as adaptive learner !!</p>
 
           <div class="tab-titles">
@@ -174,6 +178,7 @@
   <div id="nav-overlay" onclick="closemenu()"></div>
 
   <!-- JavaScript -->
+ 
   <script>
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
