make logo clickable plus makes it take to top of webpage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <div id="header">
     <div class="container">
       <nav>
-        <img src="images/logo.png" class="logo">
+        <a href="#header">
+          <img src="images/logo.png" class="logo" alt="logo">
+        </a>
         <ul id="sidemenu">
           <!-- <i class="fa-solid fa-xmark" onclick="closemenu()"></i> -->
           <li><a href="#header">Home</a></li>
