--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+        <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
       </nav>
       <div class="header-text">
         <p>
