--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+        <i class="fa-solid fa-bars" id="menu-icon" onclick="toggleMenu()"></i>
       </nav>
        <div class="header-text">
         <p>
@@ -184,62 +185,35 @@
 
   <!-- JavaScript -->
   <script>
-    var tablinks = document.getElementsByClassName("tab-links");
-    var tabcontents = document.getElementsByClassName("tab-contents");
-
-    function opentab(event, tabname) {
-      for (let tablink of tablinks) {
-        tablink.classList.remove("active-link");
-      }
-      for (let tabcontent of tabcontents) {
-        tabcontent.classList.remove("active-tab");
-      }
-      event.currentTarget.classList.add("active-link");
-      document.getElementById(tabname).classList.add("active-tab");
-    }
-  </script>
-
-  <script>
     var sidemenu = document.getElementById("sidemenu");
     var overlay = document.getElementById("nav-overlay");
-
-    function openmenu() {
-      sidemenu.style.right = "0";
-      overlay.style.display = "block";
-      document.body.style.overflow = 'hidden';
+    var menuIcon = document.querySelector(".fa-solid.fa-bars");
+    var menuOpen = false;
+  
+    function toggleMenu() {
+      if (menuOpen) {
+        sidemenu.style.right = "-200px";
+        overlay.style.display = "none";
+        document.body.style.overflow = 'auto';
+        menuIcon.classList.remove("fa-xmark");
+        menuIcon.classList.add("fa-bars");
+      } else {
+        sidemenu.style.right = "0";
+        overlay.style.display = "block";
+        document.body.style.overflow = 'hidden';
+        menuIcon.classList.remove("fa-bars");
+        menuIcon.classList.add("fa-xmark");
+      }
+      menuOpen = !menuOpen;
     }
-
-    function closemenu() {
-      sidemenu.style.right = "-200px";
-      overlay.style.display = "none";
-      document.body.style.overflow = 'auto';
-    }
-
+  
     // Close menu when clicking on a menu item
     document.querySelectorAll('#sidemenu a').forEach(item => {
-      item.addEventListener('click', closemenu);
+      item.addEventListener('click', toggleMenu);
     });
-
+  
     // Close menu when clicking outside
-    overlay.addEventListener('click', closemenu);
-  </script>
-
-  <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxURh7OEk3X5Jy9aEL6ttvECeT85LsCk7x0YkRGKqSoxbPQpEChPdrF2Wn44TK2LWPpuA/exec'
-    const form = document.forms['submit-to-google-sheet']
-    const msg = document.getElementById("msg")
-    form.addEventListener('submit', e => {
-      e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => {
-          msg.innerHTML = "Message sent successfully"
-          setTimeout(function() {
-            msg.innerHTML = ""
-          }, 5000)
-          form.reset()
-        })
-        .catch(error => console.error('Error!', error.message))
-    })
+    overlay.addEventListener('click', toggleMenu);
   </script>
 
   <!-- Service learn more transition -->
