exploring animation of menu icon during scroll in small screen

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
     var menuOpen = false;
   
     function toggleMenu() {
+      
       if (menuOpen) {
         sidemenu.style.right = "-200px";
         overlay.style.display = "none";
@@ -284,6 +285,9 @@
           .catch(error => console.error('Error!', error.message));
       });
     });
+  </script>
+  <script>
+    
   </script>
 </body>
 </html>
