Changed basic color of sub headings
heading color changed plus some update on description of writing services

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
         <div>
           <i class="fa-solid fa-code"></i>
           <h2>Web Design</h2>
-          <p>Intermediate web Designing capabilities</p>
+          <p>Adaptive client preference work</p>
           <a href="#">Learn More</a>
         </div>
         <div>
           <i class="fa-solid fa-crop-simple"></i>
           <h2>Literature</h2>
-          <p>From confession notes to suicidal notes, we write it all!</p>
+          <p>From confessions to suicidal notes, You just request it!</p>
           <a href="#">Learn More</a>
         </div>
         <div>
