made class same for aboutme contact me my work my services

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <div class="container">
     <div class="row">
       <div class="contact-left">
-        <h1>Contact Me</h1>
+        <h1 class="sub-title">Contact Me</h1>
         <p><i class="fa-brands fa-telegram"></i>ftraveller23@gmail.com</p>
         <p><i class="fa-solid fa-square-phone"></i>9745281196</p>
         <div class="social-icons">
@@ -181,7 +181,7 @@
   </div>
 </div>
 
-
+form
   <div id="nav-overlay" onclick="closemenu()"></div>
 
   <!-- JavaScript -->
