--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <img src="images/work-1.png">
           <div class="layer">
             <h3>"Room for shadows"</h3>
-            <p>A glimpse of my writing in page!<br><br></p>
+            <p>A glimpse of My Writing in Page !<br><br></p>
             <a href="https://www.facebook.com/afellowtraveller23" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
@@ -132,7 +132,7 @@
           <img src="images/work-2.png">
           <div class="layer">
             <h3>"Unwhispered Perhaps"</h3>
-            <p> Poetry website based on own writing ! </p>
+            <p> Individual Poetry Collection Website ! </p>
             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
@@ -140,7 +140,7 @@
           <img src="images/work3.jpg">
           <div class="layer">
             <h3>"Blue Sky'"</h3>
-            <p>A fictional novel based on surviving ! </p>
+            <p>A Fictional Novel based on Surviving ! </p>
             <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
