Modified writing section of servies

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
         <div>
           <i class="fa-solid fa-code"></i>
           <h2>Web Design</h2>
-          <p>Adaptive client preference work</p>
+          <p>Adaptive client preference work !</p>
           <a href="#">Learn More</a>
         </div>
         <div>
           <i class="fa-solid fa-crop-simple"></i>
           <h2>Literature</h2>
-          <p>From confessions to suicidal notes, You just request it!</p>
+          <p>From confessions to suicidal notes !</p>
           <a href="#">Learn More</a>
         </div>
         <div>
@@ -294,4 +294,3 @@
 </body>
 </html>
 
-form
