click on logo takes you to top

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         </div>
         <div>
           <i class="fa-solid fa-crop-simple"></i>
-          <h2>Literature</h2>
+          <h2>Content Writing</h2>
+          <!--Content Writing  -->
           <p>From confessions to suicidal notes !</p>
           <a href="#">Learn More</a>
         </div>
@@ -290,6 +291,8 @@
       });
     });
   </script>
+  
+
   <script>
     
   </script>
