--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 
 
   
+ 
 </head>
 <body>
   <div id="header">
     <div class="container">
       <nav>
-        <img src="images/logo.png" class="logo">
+        <a href="#header"><img src="images/logo.png" class="logo"></a>
+        
         <ul id="sidemenu">
           <!-- <i class="fa-solid fa-xmark" onclick="closemenu()"></i> -->
           <li><a href="#header">Home</a></li>
