--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
       overlay.addEventListener('click', toggleMenu);
   
       // Google form submit
+      <!-- there si some kinda of error on for m submisssion here -->
       const scriptURL = 'https://script.google.com/macros/s/AKfycbxURh7OEk3X5Jy9aEL6ttvECeT85LsCk7x0YkRGKqSoxbPQpEChPdrF2Wn44TK2LWPpuA/exec';
       const form = document.forms['submit-to-google-sheet'];
       const msg = document.getElementById("msg");
